syntax = "proto3";

package bitwindowd.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service BitwindowdService {
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty);

  // Deniability operations
  rpc CreateDenial(CreateDenialRequest) returns (CreateDenialResponse);
  rpc ListDenials(google.protobuf.Empty) returns (ListDenialsResponse);
  rpc CancelDenial(CancelDenialRequest) returns (google.protobuf.Empty);

  // Wallet operations
  rpc CreateAddressBookEntry(CreateAddressBookEntryRequest) returns (google.protobuf.Empty);
  rpc ListAddressBook(google.protobuf.Empty) returns (ListAddressBookResponse);
  rpc UpdateAddressBookEntry(UpdateAddressBookEntryRequest) returns (google.protobuf.Empty);
  rpc DeleteAddressBookEntry(DeleteAddressBookEntryRequest) returns (google.protobuf.Empty);
}

message CreateDenialRequest {
  int32 delay_seconds = 1;
  int32 num_hops = 2;
}

message CreateDenialResponse {
  int64 id = 1;
}

message Denial {
  int64 id = 1;
  int32 delay_seconds = 2;
  int32 num_hops = 3;
  google.protobuf.Timestamp created_at = 4;
  optional google.protobuf.Timestamp cancelled_at = 5;
  optional google.protobuf.Timestamp next_execution = 6; // When the next hop will occur
  repeated ExecutedDenial executions = 7;
}

message ListDenialsResponse {
  repeated Denial denials = 1;
}

message CancelDenialRequest {
  int64 id = 1;
}

message ExecutedDenial {
  int64 id = 1;
  int64 denial_id = 2;
  string transaction_id = 3;
  google.protobuf.Timestamp created_at = 4;
}

message CreateAddressBookEntryRequest {
  string label = 1;
  string address = 2;
  Direction direction = 3;
}

enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  DIRECTION_SEND = 1;
  DIRECTION_RECEIVE = 2;
}

message AddressBookEntry {
  int64 id = 1;
  string label = 2;
  string address = 3;
  Direction direction = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ListAddressBookResponse {
  repeated AddressBookEntry entries = 1;
}

message UpdateAddressBookEntryRequest {
  int64 id = 1;
  string label = 2;
  string address = 3;
}

message DeleteAddressBookEntryRequest {
  int64 id = 1;
}
